k8s/06-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campuscart-app
  namespace: campuscart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campuscart-app
  template:
    metadata:
      labels:
        app: campuscart-app
    spec:
      containers:
        - name: campuscart-app
          image: your-dockerhub-username/campuscart:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
