k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campuscart-app-service
  namespace: campuscart
spec:
  selector:
    app: campuscart-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
