k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campuscart-ingress
  namespace: campuscart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: campuscart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campuscart-app-service
                port:
                  number: 80
